refactor: optimize roulette wheel selection and improve error handling in ProbabilisticSelection and MaxMinUpdate